!ALL - Checker interface changed!
+ New interfaces to checkers is available now.
         - Both current checkers implements new interfaces, but their computation is still based on old versions.
           It means, the conversion of the results to new interface is applied. These usage of old interface versions
           and conversions are local to both checkers, so are transparent to outside.
         - Appropriate changes in scvgui package was performed.
* These functionality changes were done to scvgui package:
         - main window receives full text description of whole list of checker's errors.
         - checker window is sensitive to choosen error-trace. It means that switching between traces or between
           CFGNodes of one trace updates contents of both text-subwindow and graph-subwindow.


git-svn-id: https://arran.fi.muni.cz/svn/stanse/trunk@283 98efdb2a-0913-0410-9d53-f03ad6a1d54d